--- a/index.html
+++ b/index.html
@@ -6,10 +6,37 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Code Gen</title>
+    <style>
+        .toolbar {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 2rem;
+
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding-left: 0.5rem;
+        }
+
+        .body {
+            position: absolute;
+            top: 2rem;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+    </style>
 </head>
 <body>
-    <button id="btnPause">Pause</button>
-    <button id="btnResume">Resume</button>
+    <div class="toolbar">
+        <button id="btnPause">Pause</button>
+        <button id="btnResume">Resume</button>
+    </div>
+
+    <div class="body">
+    </div>
 
     <script type="module">
         import {Project} from "./index.js";
@@ -18,6 +45,8 @@
 
         document.querySelector("#btnPause").addEventListener("click", () => project.pause());
         document.querySelector("#btnResume").addEventListener("click", () => project.resume());
+
+        document.querySelector(".body").appendChild(project.canvas.svg);
 
         project.start();
     </script>
