add text svg parts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Code Gen</title>
     <style>
+        html, body {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 16px;
+        }
+        
         .toolbar {
             position: absolute;
             top: 0;
